--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
   <h1>CIRLO</h1>
   <h2>PREȘEDINTE 2035</h2>
   <div class="stars">☆☆☆☆☆☆☆☆☆☆☆☆☆☆</div>
-  <p>"Un om. Un președinte. O galaxie."</p>
-  <p>Votați CIRLO. Viitorul e scris cu diacritice.</p>
+  <p>"Un om. Un președinte născut în secolul XXI."</p>
+  <p>Deși gluma mea implică rolul de președinte, această platformă nu are caracter electoral. </p>
+  <p>Este mai degrabă o satiră la adresa peisajului politic actual și, în același timp, o expresie a speranței că lucrurile se pot schimba în bine.</p>
+  <p>Umorul poate fi un început pentru o conversație serioasă</p>
+  <p>Dacă totuși lucrurile nu se schimbă în bine, sper că vă puteți baza pe mine în 2035</p>
+
+  <p>
+  Urmărește-mă și pe 
+  <a href="https://www.instagram.com/alexcirlo" target="_blank" style="text-decoration: none;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" 
+         alt="Instagram" 
+         style="width: 24px; height: 24px; vertical-align: middle; margin-left: 5px;">
+  </a>
+</p>
 </body>
 </html>
