--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <p>Deși gluma mea implică rolul de președinte, această platformă nu are caracter electoral. </p>
   <p>Este mai degrabă o satiră la adresa peisajului politic actual și, în același timp, o expresie a speranței că lucrurile se pot schimba în bine.</p>
   <p>Umorul poate fi un început pentru o conversație serioasă</p>
-  <p>Dacă totuși lucrurile nu se schimbă în bine, sper că vă puteți baza pe mine în 2035</p>
+  <p>Dacă totuși lucrurile nu se schimbă în bine, sper că vă puteți baza pe mine în 2035.</p>
 
   <p>
   Urmărește-mă și pe 
@@ -33,6 +33,7 @@
          alt="Instagram" 
          style="width: 24px; height: 24px; vertical-align: middle; margin-left: 5px;">
   </a>
+    @alexcirlo pentru un viitor cu față umană
 </p>
 </body>
 </html>
