--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
   <p>Dacă totuși lucrurile nu se schimbă în bine, sper că vă puteți baza pe mine în 2035.</p>
 
   <p>
-  Urmărește-mă și pe 
+  Urmărește-mă
   <a href="https://www.instagram.com/alexcirlo" target="_blank" style="text-decoration: none;">
     <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" 
          alt="Instagram" 
          style="width: 24px; height: 24px; vertical-align: middle; margin-left: 5px;">
   </a>
-    @alexcirlo pentru un viitor cu față umană
+   pentru un viitor cu față umană
 </p>
 </body>
 </html>
